--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LUX</title>
-    <link rel="stylesheet" href="./css/style.css" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400;700&family=Luxurious+Roman&display=swap" rel="stylesheet" />
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/6209fab7df.js" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -70,12 +73,34 @@
     <!-- MAIN -->
     <main class="main">
         <!-- CARRUSEL -->
-        <div class="main__carousel">
+        <!-- <div class="main__carousel">
             <i class="fa-regular fa-angles-right next"></i>
             <i class="fa-regular fa-angles-left previous"></i>
             <img class="carouselImg" src="./img/Carousel3.jpg" alt="Imagen Carrusel" />
             <img class="carouselImg" src="./img/Carousel1.jpg" alt="Imagen Carrusel" />
             <img class="carouselImg" src="./img/Carousel2.jpg" alt="Imagen Carrusel" />
+        </div> -->
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active carouselFlex">
+                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                    <img src="./img/Carousel2.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
         </div>
 
         <!-- INFORMACIÓN -->
@@ -310,6 +335,7 @@
             <p>&copy; 2022, LUX</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
 </html>
