--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <header class="header">
         <div class="header__top">
+            <button class="menu">
+          <i class="fa-solid fa-bars"></i>
+        </button>
             <div class="header__top--left">
                 <p>SÍGUENOS EN</p>
                 <div class="icons">
@@ -66,6 +69,7 @@
                 <li><a href="/Proyecto/hoodies.html">SUDADERAS</a></li>
                 <li><a href="/Proyecto/sneakers.html">ZAPATILLAS</a></li>
                 <li><a href="/Proyecto/accessories.html">ACCESORIOS</a></li>
+                <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -82,15 +86,14 @@
         </div> -->
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active carouselFlex">
+                <div class="carousel-item active">
                     <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item">
                     <img src="./img/Carousel2.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                    <img src="./img/Carousel3.jpg" class="d-block w-100" alt="..." />
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -336,6 +339,16 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script>
+        const menu = document.querySelector(".menu");
+        const navMenu = document.querySelector(".header__nav");
+        const search = document.querySelector(".search");
+
+        menu.addEventListener("click", () => {
+            navMenu.classList.toggle("nav_visible");
+            search.classList.toggle("search_unvisible");
+        });
+    </script>
 </body>
 
 </html>
