Responsive NavBar in all Pages

--- a/index.html
+++ b/index.html
@@ -76,13 +76,6 @@
     <!-- MAIN -->
     <main class="main">
         <!-- CARRUSEL -->
-        <!-- <div class="main__carousel">
-            <i class="fa-regular fa-angles-right next"></i>
-            <i class="fa-regular fa-angles-left previous"></i>
-            <img class="carouselImg" src="./img/Carousel3.jpg" alt="Imagen Carrusel" />
-            <img class="carouselImg" src="./img/Carousel1.jpg" alt="Imagen Carrusel" />
-            <img class="carouselImg" src="./img/Carousel2.jpg" alt="Imagen Carrusel" />
-        </div> -->
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -172,22 +165,22 @@
             <div class="gridItem">
                 <h2>COLECCIÓN 1</h2>
                 <img src="./img/collection1.jpg" alt="Colección 1" />
-                <a href="#"><button class="btn">EXPLORAR</button></a>
+                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
             </div>
             <div class="gridItem">
                 <h2>COLECCIÓN 2</h2>
                 <img src="./img/collection2.jpg" alt="Colección 1" />
-                <a href="#"><button class="btn">EXPLORAR</button></a>
+                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
             </div>
             <div class="gridItem">
                 <h2>COLECCIÓN 3</h2>
                 <img src="./img/collection3.jpg" alt="Colección 1" />
-                <a href="#"><button class="btn">EXPLORAR</button></a>
+                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
             </div>
             <div class="gridItem">
                 <h2>COLECCIÓN 4</h2>
                 <img src="./img/collection4.jpg" alt="Colección 1" />
-                <a href="#"><button class="btn">EXPLORAR</button></a>
+                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
             </div>
         </div>
     </section>
