Responsive index 900px-769px

--- a/index.html
+++ b/index.html
@@ -161,26 +161,30 @@
         </div>
 
         <div class="line"></div>
-        <div class="gridCollections">
-            <div class="gridItem">
-                <h2>COLECCIÓN 1</h2>
-                <img src="./img/collection1.jpg" alt="Colección 1" />
-                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+        <div class="gridCollections container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 gridItem">
+                    <h2>COLECCIÓN 1</h2>
+                    <img src="./img/collection1.jpg" alt="Colección 1" />
+                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                </div>
+                <div class="col-md-6 col-sm-12 gridItem">
+                    <h2>COLECCIÓN 2</h2>
+                    <img src="./img/collection2.jpg" alt="Colección 1" />
+                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                </div>
             </div>
-            <div class="gridItem">
-                <h2>COLECCIÓN 2</h2>
-                <img src="./img/collection2.jpg" alt="Colección 1" />
-                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
-            </div>
-            <div class="gridItem">
-                <h2>COLECCIÓN 3</h2>
-                <img src="./img/collection3.jpg" alt="Colección 1" />
-                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
-            </div>
-            <div class="gridItem">
-                <h2>COLECCIÓN 4</h2>
-                <img src="./img/collection4.jpg" alt="Colección 1" />
-                <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+            <div class="row">
+                <div class="col-md-6 col-sm-12 gridItem">
+                    <h2>COLECCIÓN 3</h2>
+                    <img src="./img/collection3.jpg" alt="Colección 1" />
+                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                </div>
+                <div class="col-md-6 col-sm-12 gridItem">
+                    <h2>COLECCIÓN 4</h2>
+                    <img src="./img/collection4.jpg" alt="Colección 1" />
+                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                </div>
             </div>
         </div>
     </section>
@@ -188,8 +192,7 @@
     <!-- ABOUTUS -->
 
     <section class="aboutUs flexTitle">
-        <div class="titleContainer"></div>
-        <div class="line"></div>
+        <!-- <div class="line"></div> -->
         <div class="aboutUs__content">
             <iframe src="https://www.youtube.com/embed/IFEfxVWqnrU" frameborder="0"></iframe>
             <div class="aboutUs__info">
