--- a/index.html
+++ b/index.html
@@ -216,51 +216,59 @@
             <a href="#">Ver más</a>
         </div>
         <div class="line"></div>
-        <div class="reviews__content">
-            <div class="review">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+        <div id="carouselExampleSlidesOnly" class="carousel slide reviews" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="review">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <h2>MEJOR CALIDAD</h2>
+                        <p>
+                            LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
+                        </p>
+                        <h4>ISRAEL QUIROZ</h4>
+                        <div class="line"></div>
+                    </div>
                 </div>
-                <h2>MEJOR CALIDAD</h2>
-                <p>
-                    LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
-                </p>
-                <h4>ISRAEL QUIROZ</h4>
-                <div class="line"></div>
-            </div>
-            <div class="review">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                <div class="carousel-item">
+                    <div class="review">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <h2>MEJOR CALIDAD</h2>
+                        <p>
+                            LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
+                        </p>
+                        <h4>ISRAEL QUIROZ</h4>
+                        <div class="line"></div>
+                    </div>
                 </div>
-                <h2>MEJOR CALIDAD</h2>
-                <p>
-                    LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
-                </p>
-                <h4>ISRAEL QUIROZ</h4>
-                <div class="line"></div>
-            </div>
-            <div class="review">
-                <div class="stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                <div class="carousel-item">
+                    <div class="review">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <h2>MEJOR CALIDAD</h2>
+                        <p>
+                            LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
+                        </p>
+                        <h4>ISRAEL QUIROZ</h4>
+                        <div class="line"></div>
+                    </div>
                 </div>
-                <h2>MEJOR CALIDAD</h2>
-                <p>
-                    LOS ACCESORIOS Y LAS PLAYERAS TIENEN UNA MUY BUENA CALIDAD, SEGURO ME DURARÁN MUCHO TIEMPO MIS PRODUCTOS.
-                </p>
-                <h4>ISRAEL QUIROZ</h4>
-                <div class="line"></div>
             </div>
         </div>
     </section>
