All pages Responsive 900px-769px

--- a/hoodies.html
+++ b/hoodies.html
@@ -76,7 +76,7 @@
 
     <!-- PRODUCTS -->
     <div class="title flexTitle">
-        <h2>PLAYERAS</h2>
+        <h2>SUDADERAS</h2>
         <div class="line"></div>
         <button class="filterBtn">Filtrar</button>
     </div>
