Index full responsive

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <img src="./img/pulsera2.jpg" alt="Product two" />
                 <h4>PULSERA DOBLE PLATA</h4>
             </div>
-            <div class="newProducts__product">
+            <div class="newProducts__product lastProduct">
                 <img src="./img/puslera3.jpg" alt="Product three" />
                 <h4>ACERO INOXIDABLE NEGRO</h4>
             </div>
@@ -175,12 +175,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-12 gridItem">
+                <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 3</h2>
                     <img src="./img/collection3.jpg" alt="Colección 1" />
                     <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
                 </div>
-                <div class="col-md-6 col-sm-12 gridItem">
+                <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 4</h2>
                     <img src="./img/collection4.jpg" alt="Colección 1" />
                     <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
