Link to all pages

--- a/accessories.html
+++ b/accessories.html
@@ -61,12 +61,14 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
+                <li><a href="./index.html">HOME</a></li>
                 <li>
-                    <a href="/Proyecto/index.html">HOME</a>
+                    <a href="./t-shirts.html">PLAYERAS</a>
                 </li>
-                <li><a href="/Proyecto/t-shirts.html">PLAYERAS</a></li>
-                <li><a href="/Proyecto/hoodies.html">SUDADERAS</a></li>
-                <li><a href="/Proyecto/sneakers.html">ZAPATILLAS</a></li>
+                <li>
+                    <a href="./hoodies.html">SUDADERAS</a>
+                </li>
+                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
                 <li>
                     <a href="#"><span>ACCESORIOS</span></a>
                 </li>
