--- a/hoodies.html
+++ b/hoodies.html
@@ -60,15 +60,15 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
+                <li><a href="./index.html">HOME</a></li>
                 <li>
-                    <a href="/Proyecto/index.html">HOME</a>
+                    <a href="./t-shirts.html">PLAYERAS</a>
                 </li>
-                <li><a href="/Proyecto/t-shirts.html">PLAYERAS</a></li>
                 <li>
                     <a href="#"><span>SUDADERAS</span></a>
                 </li>
-                <li><a href="/Proyecto/sneakers.html">ZAPATILLAS</a></li>
-                <li><a href="/Proyecto/accessories.html">ACCESORIOS</a></li>
+                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
