--- a/sneakers.html
+++ b/sneakers.html
@@ -60,17 +60,17 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
+                <li><a href="./index.html">HOME</a></li>
                 <li>
-                    <a href="/Proyecto/index.html">HOME</a>
+                    <a href="./t-shirts.html">PLAYERAS</a>
                 </li>
-                <li><a href="/Proyecto/t-shirts.html">PLAYERAS</a></li>
                 <li>
-                    <a href="/Proyecto/hoodies.html">SUDADERAS</a>
+                    <a href="./hoodies.html">SUDADERAS</a>
                 </li>
                 <li>
                     <a href="#"><span>ZAPATILLAS</span></a>
                 </li>
-                <li><a href="/Proyecto/accessories.html">ACCESORIOS</a></li>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
