--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="header__top--left">
                 <p>SÍGUENOS EN</p>
                 <div class="icons">
-                    <a href="https://www.instagram.com/isra_quirozz/"><i class="fa-brands fa-instagram"></i
+                    <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
-                    <a href="https://www.facebook.com/israel.quirozdezaldo/"><i class="fa-brands fa-square-facebook"></i
+                    <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
             ></a>
                 </div>
             </div>
@@ -64,10 +64,10 @@
                 <li>
                     <a href="#"><span>HOME</span></a>
                 </li>
-                <li><a href="/Proyecto/t-shirts.html">PLAYERAS</a></li>
-                <li><a href="/Proyecto/hoodies.html">SUDADERAS</a></li>
-                <li><a href="/Proyecto/sneakers.html">ZAPATILLAS</a></li>
-                <li><a href="/Proyecto/accessories.html">ACCESORIOS</a></li>
+                <li><a href="./t-shirts.html">PLAYERAS</a></li>
+                <li><a href="./hoodies.html">SUDADERAS</a></li>
+                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
@@ -321,9 +321,9 @@
                 <a href="#"> AVISOS DE PRIVACIDAD </a>
                 <a href="#"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
-                    <a href="https://www.instagram.com/isra_quirozz/"><i class="fa-brands fa-instagram"></i
+                    <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
-                    <a href="https://www.facebook.com/israel.quirozdezaldo/"><i class="fa-brands fa-square-facebook"></i
+                    <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
             ></a>
                 </div>
             </div>
