--- a/t-shirts.html
+++ b/t-shirts.html
@@ -61,17 +61,13 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
-                <li>
-                    <a href="/Proyecto/index.html">HOME</a>
-                </li>
+                <li><a href="./index.html">HOME</a></li>
                 <li>
                     <a href="#"><span>PLAYERAS</span></a>
                 </li>
-                <li>
-                    <a href="/Proyecto/hoodies.html">SUDADERAS</a>
-                </li>
-                <li><a href="/Proyecto/sneakers.html">ZAPATILLAS</a></li>
-                <li><a href="/Proyecto/accessories.html">ACCESORIOS</a></li>
+                <li><a href="./hoodies.html">SUDADERAS</a></li>
+                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
