--- a/hoodies.html
+++ b/hoodies.html
@@ -143,31 +143,34 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <h1 class="footer__logo">LOGO</h1>
+        <h1>LUX</h1>
         <div class="footer__contact">
             <h2>CONTACTO</h2>
             <p>+34 624 677 628</p>
             <p>LUXSTORE@LUX.COM</p>
             <p>DE LUNES A VIERNES DE 8:00 A 21:00</p>
         </div>
+        <div class="footer__flex">
+            <div class="footer__info">
+                <h2>INFORMACIÓN</h2>
+                <a href=""> PREGUNTAS FRECUENTES </a>
+                <a href="#"> AVISOS DE PRIVACIDAD </a>
+                <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                <div class="icons">
+                    <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
+            ></a>
+                    <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
+            ></a>
+                </div>
+            </div>
 
-        <div class="footer__info">
-            <h2>INFORMACIÓN</h2>
-            <p>PREGUNTAS FRECUENTES</p>
-            <p>AVISOS DE PRIVACIDAD</p>
-            <p>TÉRMINOS Y CONDICIONES</p>
-            <a href="https://www.instagram.com/isra_quirozz/"><i class="fa-brands fa-instagram"></i
-        ></a>
-            <a href="https://www.facebook.com/israel.quirozdezaldo/"><i class="fa-brands fa-square-facebook"></i
-        ></a>
-        </div>
-
-        <div class="footer__purchases">
-            <h2>COMPRAS</h2>
-            <p>POLÍTICA DE CAMBIOS Y DEVOLUCIONES</p>
-            <p>FORMA DE PAGOS</p>
-            <p>CENTRO DE DEVOLUCIONES</p>
-            <p>RASTREA TU PEDIDO</p>
+            <div class="footer__info">
+                <h2>COMPRAS</h2>
+                <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                <a href="#"> FORMA DE PAGOS </a>
+                <a href="#"> CENTRO DE DEVOLUCIONES </a>
+                <a href="#"> RASTREA TU PEDIDO </a>
+            </div>
         </div>
 
         <div class="footer__bottom">
