--- a/sneakers.html
+++ b/sneakers.html
@@ -160,9 +160,9 @@
                 <a href="#"> AVISOS DE PRIVACIDAD </a>
                 <a href="#"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
-                    <a href="https://www.instagram.com/isra_quirozz/"><i class="fa-brands fa-instagram"></i
+                    <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
-                    <a href="https://www.facebook.com/israel.quirozdezaldo/"><i class="fa-brands fa-square-facebook"></i
+                    <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
             ></a>
                 </div>
             </div>
