Changes in knowMore Section

--- a/index.html
+++ b/index.html
@@ -275,13 +275,11 @@
 
     <!-- MORE INFO  -->
     <section class="knowMore">
-        <h2>MÁS INFORMACIÓN</h2>
-        <div class="line"></div>
         <div class="infoContainer">
             <div class="info">
                 <i class="fa-regular fa-thumbs-up"></i>
                 <div class="infoContent">
-                    <h3>GUÍA DE TALLAS</h3>
+                    <h3><a href="#"> GUÍA DE TALLAS</a></h3>
                     <p>VERA LA GUÍA DE TALLAS PARA HACER CORRECTAMENTE SU PEDIDO</p>
                 </div>
             </div>
