Correction on link from knowMore Section

--- a/index.html
+++ b/index.html
@@ -166,24 +166,24 @@
                 <div class="col-md-6 col-sm-12 gridItem">
                     <h2>COLECCIÓN 1</h2>
                     <img src="./img/collection1.jpg" alt="Colección 1" />
-                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                    <button class="collectionBtn">EXPLORAR</button>
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem">
                     <h2>COLECCIÓN 2</h2>
                     <img src="./img/collection2.jpg" alt="Colección 1" />
-                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                    <button class="collectionBtn">EXPLORAR</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 3</h2>
                     <img src="./img/collection3.jpg" alt="Colección 1" />
-                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                    <button class="collectionBtn">EXPLORAR</button>
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 4</h2>
                     <img src="./img/collection4.jpg" alt="Colección 1" />
-                    <a href="#"><button class="collectionBtn">EXPLORAR</button></a>
+                    <button class="collectionBtn">EXPLORAR</button>
                 </div>
             </div>
         </div>
@@ -280,7 +280,7 @@
                 <i class="fa-regular fa-thumbs-up"></i>
                 <div class="infoContent">
                     <h3><a href="#"> GUÍA DE TALLAS</a></h3>
-                    <p>VERA LA GUÍA DE TALLAS PARA HACER CORRECTAMENTE SU PEDIDO</p>
+                    <p>VER LA GUÍA DE TALLAS PARA HACER CORRECTAMENTE SU PEDIDO</p>
                 </div>
             </div>
 
