--- a/t-shirts.html
+++ b/t-shirts.html
@@ -16,6 +16,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- SASS -->
+    <link rel="stylesheet" href="./sass/products.css" />
 </head>
 
 <body>
@@ -185,7 +187,6 @@
 
         menu.addEventListener("click", () => {
             navMenu.classList.toggle("nav_visible");
-            search.classList.toggle("search_unvisible");
             body.classList.toggle("allFixed");
         });
     </script>
