Complete Sass & links

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 <li>
                     <a href="#"><span>HOME</span></a>
                 </li>
-                <li><a href="./t-shirts.html">PLAYERAS</a></li>
-                <li><a href="./hoodies.html">SUDADERAS</a></li>
-                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
-                <li><a href="./accessories.html">ACCESORIOS</a></li>
+                <li><a href="./pages/t-shirts.html">PLAYERAS</a></li>
+                <li><a href="./pages/hoodies.html">SUDADERAS</a></li>
+                <li><a href="./pages/sneakers.html">ZAPATILLAS</a></li>
+                <li><a href="./pages/accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
