--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -15,12 +15,13 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- SASS -->
-    <link rel="stylesheet" href="./sass/products.css" />
+    <link rel="stylesheet" href="../sass/products.css" />
 </head>
 
 <body>
+    <!-- header -->
     <header class="header">
         <div class="header__top">
             <button class="menu">
@@ -35,7 +36,7 @@
             ></a>
                 </div>
             </div>
-            <a href="./index.html">
+            <a href="../index.html">
                 <h1 class="header__logo">LUX</h1>
             </a>
 
@@ -62,17 +63,17 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
-                <li><a href="./index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li>
                     <a href="./t-shirts.html">PLAYERAS</a>
                 </li>
                 <li>
                     <a href="./hoodies.html">SUDADERAS</a>
                 </li>
+                <li><a href="./sneakers.html">ZAPATILLAS</a></li>
                 <li>
-                    <a href="#"><span>ZAPATILLAS</span></a>
+                    <a href="#"><span>ACCESORIOS</span></a>
                 </li>
-                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
@@ -80,7 +81,7 @@
 
     <!-- PRODUCTS -->
     <div class="title flexTitle">
-        <h2>ZAPATILLAS</h2>
+        <h2>ACCESORIOS</h2>
         <div class="line"></div>
         <button class="filterBtn">Filtrar</button>
     </div>
@@ -89,35 +90,16 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/pulsera1.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
                 <h4>€15</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/pulsera2.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
@@ -127,7 +109,16 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/puslera3.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item difItem">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/pulsera1.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
@@ -136,7 +127,18 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img/pulsera2.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item difItem">
+            <i class="heartIcon fa-regular fa-heart"></i>
+
+            <img src="../img/puslera3.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
@@ -144,9 +146,7 @@
             </div>
         </div>
     </section>
-
     <!-- FOOTER -->
-
     <footer class="footer">
         <h1>LUX</h1>
         <div class="footer__contact">
