--- a/pages/hoodies.html
+++ b/pages/hoodies.html
@@ -15,13 +15,12 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- SASS -->
-    <link rel="stylesheet" href="./sass/products.css" />
+    <link rel="stylesheet" href="../sass/products.css" />
 </head>
 
 <body>
-    <!-- header -->
     <header class="header">
         <div class="header__top">
             <button class="menu">
@@ -36,7 +35,7 @@
             ></a>
                 </div>
             </div>
-            <a href="./index.html">
+            <a href="../index.html">
                 <h1 class="header__logo">LUX</h1>
             </a>
 
@@ -63,17 +62,15 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
-                <li><a href="./index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li>
                     <a href="./t-shirts.html">PLAYERAS</a>
                 </li>
                 <li>
-                    <a href="./hoodies.html">SUDADERAS</a>
+                    <a href="#"><span>SUDADERAS</span></a>
                 </li>
                 <li><a href="./sneakers.html">ZAPATILLAS</a></li>
-                <li>
-                    <a href="#"><span>ACCESORIOS</span></a>
-                </li>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
                 <li class="account"><a href="#">CUENTA</a></li>
             </ul>
         </nav>
@@ -81,71 +78,72 @@
 
     <!-- PRODUCTS -->
     <div class="title flexTitle">
-        <h2>ACCESORIOS</h2>
+        <h2>SUDADERAS</h2>
         <div class="line"></div>
         <button class="filterBtn">Filtrar</button>
     </div>
 
     <section class="collection">
-        <div class="collection__item difItem">
+        <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
-        <div class="collection__item difItem">
+        <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h5>CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
+        <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
-        <div class="collection__item difItem">
+        <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h5>CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5 class="soldOutItem">CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5>CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
     </section>
     <!-- FOOTER -->
+
     <footer class="footer">
         <h1>LUX</h1>
         <div class="footer__contact">
