--- a/pages/t-shirts.html
+++ b/pages/t-shirts.html
@@ -15,9 +15,9 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- SASS -->
-    <link rel="stylesheet" href="./sass/products.css" />
+    <link rel="stylesheet" href="../sass/products.css" />
 </head>
 
 <body>
@@ -36,7 +36,7 @@
             ></a>
                 </div>
             </div>
-            <a href="./index.html">
+            <a href="../index.html">
                 <h1 class="header__logo">LUX</h1>
             </a>
 
@@ -63,7 +63,7 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
-                <li><a href="./index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li>
                     <a href="#"><span>PLAYERAS</span></a>
                 </li>
@@ -86,35 +86,16 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>CH M G EG</h5>
+                <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>CH M G EG</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>CH M G EG</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/2t-shirt.jpeg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
@@ -124,7 +105,16 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="./img/img.png" alt="Playera 1" />
+            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5 class="soldOutItem">CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
@@ -133,7 +123,17 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="./img/img.png" alt="Playera 1" />
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5 class="soldOutItem">CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
@@ -187,6 +187,7 @@
 
         menu.addEventListener("click", () => {
             navMenu.classList.toggle("nav_visible");
+            search.classList.toggle("search_unvisible");
             body.classList.toggle("allFixed");
         });
     </script>
