Responsive Sneakers & Accessories pages

--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -87,6 +87,7 @@
     </div>
 
     <section class="collection">
+        <!-- <div class="collection__item difItem"> -->
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
