Complete website structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUX</title>
+    <!-- SEO -->
+    <meta name="description" content="Lux | Marca de ropa, exprésate a tu manera con diseños únicos. Entra y descubre tu propia escencia." />
+    <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
+    <title>LUX | Descubre tu escencia</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="./img/1icon.ico" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -79,13 +84,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/Carousel1.jpg" class="d-block w-100" alt="..." />
+                    <img src="./img/1carrusel.jpg" class="d-block w-100" alt="Imagen Carrusel" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/Carousel2.jpg" class="d-block w-100" alt="..." />
+                    <img src="./img/2carrusel.jpg" class="d-block w-100" alt="Imagen Carrusel" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/Carousel3.jpg" class="d-block w-100" alt="..." />
+                    <img src="./img/3carrusel.jpg" class="d-block w-100" alt="Imagen Carrusel" />
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -170,19 +175,19 @@
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem">
                     <h2>COLECCIÓN 2</h2>
-                    <img src="./img/collection2.jpg" alt="Colección 1" />
+                    <img src="./img/collection2.jpg" alt="Colección 2" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 3</h2>
-                    <img src="./img/collection3.jpg" alt="Colección 1" />
+                    <img src="./img/collection3.jpg" alt="Colección 3" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
                     <h2>COLECCIÓN 4</h2>
-                    <img src="./img/collection4.jpg" alt="Colección 1" />
+                    <img src="./img/collection4.jpg" alt="Colección 4" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
             </div>
