--- a/pages/hoodies.html
+++ b/pages/hoodies.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUX</title>
+    <!-- SEO -->
+    <meta name="description" content="Lux | Sudaderas con diseños únicos y originales, tus prendas favoritas en una mismo lugar." />
+    <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
+    <title>LUX | SUDADERAS</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="../img/1icon.ico" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -87,11 +92,11 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="PAST TENSE" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>PAST TENSE</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -100,45 +105,45 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 2" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 3" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 4" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <img src="../img/1hoodies.jpg" alt="Playera 5" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€15</h4>
+                <h4>€20</h4>
             </div>
         </div>
     </section>
