--- a/pages/sneakers.html
+++ b/pages/sneakers.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUX</title>
+    <!-- SEO -->
+    <meta name="description" content="Lux | Descubre las zapatillas con más estilo, entra y compra las tuyas." />
+    <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
+    <title>LUX | SNEAKERS</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="../img/1icon.ico" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -89,58 +94,58 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="AIR JORDAN 1 LOW" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>AIR JORDAN 1 LOW</h4>
+                <h5 class="soldOutItem">ZAPATILLAS - HOMBRE</h5>
+                <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="SNEAKER 1" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="SNEAKER 2" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="SNEAKER 3" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="SNEAKER 4" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="Playera 1" />
+            <img src="../img/1sneakers.jpg" alt="SNEAKER 5" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€119,99</h4>
             </div>
         </div>
     </section>
