--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUX</title>
+    <!-- SEO -->
+    <meta name="description" content="Lux | Accesorios con una calidad suprema, lo más elegante para ti." />
+    <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
+    <title>LUX | ACCESORIOS</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="../img/1icon.ico" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -91,59 +96,59 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/pulsera1.jpg" alt="Playera 1" />
+            <img src="../img/pulsera1.jpg" alt="PULSERA 1" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>CUERO NEGRO / PLATA</h4>
+                <h5 class="soldOutItem">PULSERA - HOMBRE</h5>
+                <h4>€60</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/pulsera2.jpg" alt="Playera 1" />
+            <img src="../img/pulsera2.jpg" alt="PULSERA 2" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/puslera3.jpg" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/pulsera1.jpg" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>PULSERA DOBLE PLATA</h4>
+                <h5>PULSERA - HOMBRE</h5>
+                <h4>€60</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/pulsera2.jpg" alt="Playera 1" />
+            <img src="../img/puslera3.jpg" alt="PULSERA 3" />
+            <div class="item__description">
+                <h4>ACERO INOXIDABLE NEGRO</h4>
+                <h5 class="soldOutItem">PULSERA - UNISEX</h5>
+                <h4>€60</h4>
+            </div>
+        </div>
+        <div class="collection__item difItem">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/pulsera1.jpg" alt="PULSERA 4" />
+            <div class="item__description">
+                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h4>€60</h4>
+            </div>
+        </div>
+        <div class="collection__item difItem">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img/pulsera2.jpg" alt="PULSERA 5" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€60</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
 
-            <img src="../img/puslera3.jpg" alt="Playera 1" />
+            <img src="../img/puslera3.jpg" alt="PULSERA 6" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>DESCRIPCIÓN PRODUCTO</h5>
-                <h4>€15</h4>
+                <h4>€60</h4>
             </div>
         </div>
     </section>
