--- a/pages/t-shirts.html
+++ b/pages/t-shirts.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUX</title>
+    <!-- SEO -->
+    <meta name="description" content="Lux | Playeras con diseños únicos y originales, tus prendas favoritas en un mismo lugar." />
+    <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
+    <title>LUX | PLAYERAS</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="../img/1icon.ico" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -86,16 +91,35 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
+            <img src="../img/1t-shirt.jpg" alt="AWHEN YIREH" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>AWHEN YIREH</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/2t-shirt.jpg" alt="Playera 1" />
+            <img src="../img/2t-shirt.jpg" alt="CHOOSE YOUR WEAPON" />
+            <div class="item__description">
+                <h4>CHOOSE YOUR WEAPON</h4>
+                <h5>CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img/3t-shirt.jpg" alt="KOBRA KAI" />
+            <div class="item__description">
+                <h4>KOBRA KAI</h4>
+                <h5 class="soldOutItem">CH M G EG</h5>
+                <h4>€15</h4>
+            </div>
+        </div>
+        <div class="collection__item">
+            <i class="heartIcon fa-regular fa-heart"></i>
+            <img src="../img/2t-shirt.jpg" alt="Playera 4" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
@@ -105,7 +129,7 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/3t-shirt.jpg" alt="Playera 1" />
+            <img src="../img/3t-shirt.jpg" alt="Playera 5" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
@@ -114,26 +138,7 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/2t-shirt.jpg" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>CH M G EG</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/3t-shirt.jpg" alt="Playera 1" />
-            <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€15</h4>
-            </div>
-        </div>
-        <div class="collection__item">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1t-shirt.jpg" alt="Playera 1" />
+            <img src="../img/1t-shirt.jpg" alt="Playera 6" />
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
