--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
     <!-- ABOUTUS -->
 
     <section class="aboutUs flexTitle">
-        <!-- <div class="line"></div> -->
         <div class="aboutUs__content">
             <iframe src="https://www.youtube.com/embed/IFEfxVWqnrU" frameborder="0"></iframe>
             <div class="aboutUs__info">
@@ -207,7 +206,7 @@
                     <span>SIN LÍMITES</span>.
                 </h2>
                 <p>
-                    PREPÁRATE PARA CUALQUIER ESTACIÓN DEL AÑO,PORTANDO LA MEJOR CALIDAD DE NUESTRAS PRENDAS Y ACCESORIOS.
+                    PREPÁRATE PARA CUALQUIER ESTACIÓN DEL AÑO, PORTANDO LA MEJOR CALIDAD DE NUESTRAS PRENDAS Y ACCESORIOS.
                 </p>
                 <p>Descubre las últimas novedades de LUX.</p>
             </div>
@@ -282,7 +281,7 @@
     <section class="knowMore">
         <div class="infoContainer">
             <div class="info">
-                <i class="fa-regular fa-thumbs-up"></i>
+                <i class="fa-solid fa-ruler"></i>
                 <div class="infoContent">
                     <h3><a href="#"> GUÍA DE TALLAS</a></h3>
                     <p>VER LA GUÍA DE TALLAS PARA HACER CORRECTAMENTE SU PEDIDO</p>
@@ -290,14 +289,14 @@
             </div>
 
             <div class="info">
-                <i class="fa-regular fa-thumbs-up"></i>
+                <i class="fa-regular fa-gem"></i>
                 <div class="infoContent">
                     <h3>CALIDAD</h3>
                     <p>LUX GARANTIZA UNA CALIDAD SUPREMA</p>
                 </div>
             </div>
             <div class="info">
-                <i class="fa-regular fa-thumbs-up"></i>
+                <i class="fa-solid fa-message"></i>
                 <div class="infoContent">
                     <h3>CONTACTANOS</h3>
                     <p>LLAMENOS AL +34 624 627 678</p>
